# Autonomous-Strawberry-Harvester

./: .gitignore  README.md  demo2.rviz  frames_2026-02-04_19.45.03.gv  run_microros_agent.sh
src/easy_handeye2/easy_handeye2/easy_handeye2/: handeye_calibration_backend_opencv.py  handeye_rqt_calibrator_widget.py
src/easy_handeye2/easy_handeye2/launch/: calibrate.launch.py
src/harvest_bot/: CMakeLists.txt  package.xml
src/harvest_bot/arduino/cutter_node/: cutter_node.ino
src/harvest_bot/arduino/servo_control/: servo_control.ino
src/harvest_bot/config/: ur10_realsense_eih.calib
src/harvest_bot/launch/: aruco_publisher.launch.py  calibrate_eye_in_hand.launch.py  harvester_bringup.launch.py  harvester_bringup_v2.launch.py  publish_calibration.launch.py  realsense.launch.py  simulation.launch.py
src/harvest_bot/scripts/: coordinate_validation.py  gui.py  harvest.py  harvester_planner.py  vision.py
src/harvest_bot/urdf/: camera.xacro  end_effector.xacro  final_robot.urdf  plant.urdf  ur10_strawberry.urdf.xacro
src/strawberry_moveit_config/: CMakeLists.txt  package.xml
src/strawberry_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controller.yaml  ros2_controllers.yaml  ur10_strawberry.srdf
src/strawberry_moveit_config/launch/: demo.launch.py  ur_moveit.launch.py
